<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--  Name  -->
    <TextView
        android:id="@+id/tvFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/first_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="216dp"
        android:text="@string/last_name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etFirstname"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="#8D6E63"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/etLastname"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="#8D6E63"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:importantForAutofill="no" />

    <!--  Gender  -->
    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:text="@string/gender"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="108dp"
        android:layout_marginTop="130dp"
        >

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:checked="false"
            android:text="@string/male"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/female"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

    </RadioGroup>

    <!--  Birthday  -->
    <TextView
        android:id="@+id/tvBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:text="@string/birthday"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etBirthday"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:hint="@string/birthday"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="#8D6E63"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="228dp"
        android:text="@string/check"
        android:backgroundTint="#d3d3d3"
        android:textColor="@color/black"
        app:circularflow_radiusInDP="10dp"/>

    <!--  Address  -->
    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:text="@string/address"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="368dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="328dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:autofillHints="" />

    <!--  Email  -->
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="440dp"
        android:text="@string/email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="468dp"
        android:allowUndo="true"
        android:ems="10"
        android:hint="@string/email"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:inputType="textEmailAddress"
        android:autofillHints="aaaaaa@gmail.com" />

    <!--  Agree Terms  -->
    <CheckBox
        android:id="@+id/termAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="520dp"
        android:text="@string/i_agree_to_terms_of_use" />

    <!--  Register Button  -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="580dp"
        android:layout_marginStart="100dp"
        android:text="@string/register"
        android:textSize="20sp"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>